# ciaudit

./: .gitignore  README.md  ciaudit.py  pyproject.toml
examples/: circleci_vulnerable.yml  efficient.yml  github_secure.yml  github_vulnerable.yml  gitlab_vulnerable.yml  inefficient.yml
