[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciaudit"
version = "1.0.0"
description = "Zero-dependency CI/CD pipeline security scanner for GitHub Actions, GitLab CI, and CircleCI"
readme = "README.md"
authors = [
    {name = "Kris Kimmerle", email = "kris@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["security", "ci-cd", "github-actions", "gitlab-ci", "circleci", "scanner", "audit"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/kriskimmerle/ciaudit"
Repository = "https://github.com/kriskimmerle/ciaudit"
Issues = "https://github.com/kriskimmerle/ciaudit/issues"

[project.scripts]
ciaudit = "ciaudit:main"

[tool.setuptools]
py-modules = ["ciaudit"]
