[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ciaudit"
version = "1.0.0"
description = "CI/CD Pipeline Efficiency & Cost Auditor for GitHub Actions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kris Kimmerle"}
]
keywords = ["ci", "cd", "github-actions", "efficiency", "cost", "optimization", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/ciaudit"
Repository = "https://github.com/kriskimmerle/ciaudit"
Issues = "https://github.com/kriskimmerle/ciaudit/issues"

[project.scripts]
ciaudit = "ciaudit:main"
